семантика, текст,шрифты

--- a/index.html
+++ b/index.html
@@ -15,15 +15,211 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="section container"></header>
+    <header class="section header">
+      <div class="container topline flexbox">
+        <div class="topline-slider">
+          <a href="" class="logo"
+            ><img src="./images/logo-barbershop.svg" alt="Логотип BarberShop"
+          /></a>
+          <ul class="list list social-list">
+            <li class="social-item">
+              <a
+                href="#"
+                class="link social-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="ссылка на Инстаграм"
+                >Instagram</a
+              >
+            </li>
+            <li class="social-item">
+              <a
+                href="#"
+                class="link social-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="ссылка на Ютуб"
+                >Youtube</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="container">
+          <div class="topline-navigation flexbox">
+            <nav class="header-nav">
+              <ul class="list header-nav-list flexbox">
+                <li><a href="" class="link nav-link">О нас</a></li>
+                <li><a href="" class="link nav-link">Услуги и цены</a></li>
+                <li><a href="" class="link nav-link">Мастера</a></li>
+                <li><a href="" class="link nav-link">Контакты</a></li>
+              </ul>
+            </nav>
+            <a href="tel:+380441111111" class="link nav-link"
+              >+38 044 111 11 11</a
+            >
+            <button type="button" class="button nav-button">
+              онлайн-запись
+            </button>
+          </div>
+          <div class="primary">
+            <div class="content">
+              <p class="subtitle nomargin">A hair salon for men in Kyiv</p>
+              <h1 class="title title-page nomargin">BarberShop</h1>
+              <p>
+                Мы эксперты в модных мужских стрижках. Работаем быстро,
+                осторожно и со вкусом.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
     <main>
-      <section class="section container about-us"></section>
-      <section class="section container price"></section>
-      <section class="section container why"></section>
-      <section class="section container masters"></section>
-      <section class="section container portfolio"></section>
-      <section class="section container contacts"></section>
+      <section class="section about-us">
+        <div class="container">
+          <div class="container"></div>
+          <p class="subtitle nomargin">О НАС</p>
+          <h2 class="title title-section nomargin">
+            Лучший Барбершоп твоего города
+          </h2>
+          <p>
+            Если ты хочешь добавить в свой образ больше уверенности – тебе точно
+            к нам.
+          </p>
+          <p>
+            Мы команда, которая никогда не останавливается на достигнутом и
+            жаждет перемен. И когда ты попадешь в руки нашего мастера, то уже
+            никогда не сможешь быть прежним. Мы команда, которая всегда с
+            клиентами "на одной волне". Поэтому, мы всегда готовы
+            усовершенствовать каждого, кто к нам приходит!
+          </p>
+          <button type="button" class="header-button">онлайн-запись</button>
+        </div>
+      </section>
+      <section class="section price">
+        <div class="container">
+          <p class="subtitle nomargin">
+            Проведи время в компании лучших мастеров
+          </p>
+          <h2 class="title title-section nomargin">Услуги и цены</h2>
+          <div class="price-part-one">
+            <ul class="list price-list">
+              <li>Мужская стрижка</li>
+              <li>Стрижка бороды</li>
+              <li>Стрижка усов</li>
+              <li>Бритье опасной бритвой</li>
+            </ul>
+          </div>
+          <div class="price-part-two">
+            <ul class="list price-list">
+              <li>Cтрижка у стажера</li>
+              <li>Стрижка под насадку</li>
+              <li>Детская стрижка (до 12 лет)</li>
+              <li>Камуфлирование седины</li>
+            </ul>
+          </div>
+          <button type="button" class="header-button">онлайн-запись</button>
+        </div>
+      </section>
+      <section class="section why">
+        <div class="container">
+          <ul class="list feuters-list">
+            <li class="feuters-item">600</li>
+            <li class="feuters-item">50</li>
+            <li class="feuters-item">20</li>
+            <li class="feuters-item">100</li>
+          </ul>
+          <p class="subtitle nomargin">старая традиционная школа</p>
+          <h2 class="title title-section nomargin">
+            Почему приходят именно к нам?
+          </h2>
+          <p>
+            О нас говорят только хорошее. Но лучше 1 раз увидеть и
+            прочувствовать, чем 10 раз прочитать.
+          </p>
+        </div>
+      </section>
+      <section class="section masters">
+        <div class="container">
+          <p class="subtitle nomargin">для настоящих ценителей атмосферы</p>
+          <h2 class="title title-section nomargin">Наши мастера</h2>
+          <ul class="list masters-list">
+            <li class="masters-card">
+              <img src="./images/" alt="" />
+              <p class="masters-name">John Smith</p>
+              <p class="masters-states">Extreme Barber</p>
+              <ul class="list social-list">
+                <li class="social-items"></li>
+                <li class="social-items"></li>
+                <li class="social-items"></li>
+                <li class="social-items"></li>
+              </ul>
+            </li>
+            <li class="masters-card">
+              <img src="./images/" alt="" />
+              <p class="masters-name">Michele Doe</p>
+              <p class="masters-states">Extreme Barber</p>
+              <ul class="list social-list">
+                <li class="social-items"></li>
+                <li class="social-items"></li>
+                <li class="social-items"></li>
+                <li class="social-items"></li>
+              </ul>
+            </li>
+            <li class="masters-card">
+              <img src="./images/" alt="" />
+              <p class="masters-name">Alan Black</p>
+              <p class="masters-states">Extreme Barber</p>
+              <ul class="list social-list">
+                <li class="social-items"></li>
+                <li class="social-items"></li>
+                <li class="social-items"></li>
+                <li class="social-items"></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section portfolio">
+        <div class="container">
+          <p class="subtitle nomargin">
+            На латинском языке “барба” означает “борода”
+          </p>
+          <h2 class="title title-section nomargin is-hidden">Портфолио</h2>
+          <ul class="list portfolio-list">
+            <li class="portfolio-card">
+              <img class="portfolio-image" src="./images/" alt="" />
+            </li>
+            <li class="portfolio-card">
+              <img class="portfolio-image" src="./images/" alt="" />
+            </li>
+            <li class="portfolio-card">
+              <img class="portfolio-image" src="./images/" alt="" />
+            </li>
+            <li class="portfolio-card">
+              <img class="portfolio-image" src="./images/" alt="" />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section contacts">
+        <div class="container">
+          <div class="contacts-form">
+            <h2 class="title title-section nomargin">онлайн-запись</h2>
+          </div>
+          <div class="contacts-data">
+            <h2 class="title title-section nomargin">Контакты</h2>
+            <address>
+              <p class="">ул. Васильковая, 7А Киев, 08132</p>
+              <p>+38 044 111 11 11</p>
+              <p>barbershop@email.com</p>
+            </address>
+            <p class="subtitle nomargin">время работы</p>
+            <p>Ежедневно с 9:00 до 22:00</p>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer class="section container"></footer>
+    <footer class="section"></footer>
   </body>
 </html>
