и это только секция шапки и героя

--- a/index.html
+++ b/index.html
@@ -16,65 +16,59 @@
   </head>
   <body>
     <header class="section header">
-      <div class="container topline flexbox">
-        <div class="topline-slider">
+      <div class="topline-navigation container flexbox">
+        <nav class="header-nav flexbox">
           <a href="" class="logo"
             ><img src="./images/logo-barbershop.svg" alt="Логотип BarberShop"
           /></a>
-          <ul class="list list social-list">
-            <li class="social-item">
-              <a
-                href="#"
-                class="link social-link"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="ссылка на Инстаграм"
-                >Instagram</a
-              >
-            </li>
-            <li class="social-item">
-              <a
-                href="#"
-                class="link social-link"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="ссылка на Ютуб"
-                >Youtube</a
-              >
-            </li>
+          <ul class="list header-nav-list flexbox">
+            <li><a href="" class="link nav-link">О нас</a></li>
+            <li><a href="" class="link nav-link">Услуги и цены</a></li>
+            <li><a href="" class="link nav-link">Мастера</a></li>
+            <li><a href="" class="link nav-link">Контакты</a></li>
           </ul>
-        </div>
-        <div class="container">
-          <div class="topline-navigation flexbox">
-            <nav class="header-nav">
-              <ul class="list header-nav-list flexbox">
-                <li><a href="" class="link nav-link">О нас</a></li>
-                <li><a href="" class="link nav-link">Услуги и цены</a></li>
-                <li><a href="" class="link nav-link">Мастера</a></li>
-                <li><a href="" class="link nav-link">Контакты</a></li>
-              </ul>
-            </nav>
-            <a href="tel:+380441111111" class="link nav-link"
-              >+38 044 111 11 11</a
-            >
-            <button type="button" class="button nav-button">
-              онлайн-запись
-            </button>
-          </div>
-          <div class="primary">
-            <div class="content">
-              <p class="subtitle nomargin">A hair salon for men in Kyiv</p>
-              <h1 class="title title-page nomargin">BarberShop</h1>
-              <p>
-                Мы эксперты в модных мужских стрижках. Работаем быстро,
-                осторожно и со вкусом.
-              </p>
-            </div>
-          </div>
-        </div>
+        </nav>
+        <a href="tel:+380441111111" class="link nav-link">+38 044 111 11 11</a>
+        <button type="button" class="button nav-button">онлайн-запись</button>
       </div>
     </header>
     <main>
+      <section class="section primary">
+        <div class="container flexbox">
+          <div class="topline-slider flexbox">
+            <ul class="list list social-list flexbox">
+              <li class="social-item">
+                <a
+                  href="#"
+                  class="link social-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="ссылка на Инстаграм"
+                  >Instagram</a
+                >
+              </li>
+              <li class="social-item">
+                <a
+                  href="#"
+                  class="link social-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="ссылка на Ютуб"
+                  >Youtube</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="content">
+            <p class="subtitle nomargin">A hair salon for men in Kyiv</p>
+            <h1 class="title title-page nomargin">BarberShop</h1>
+            <p class="text">
+              Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно
+              и со вкусом.
+            </p>
+          </div>
+        </div>
+      </section>
       <section class="section about-us">
         <div class="container">
           <div class="container"></div>
