--- a/index.html
+++ b/index.html
@@ -69,25 +69,46 @@
           </div>
         </div>
       </section>
-      <section class="section about-us">
-        <div class="container">
-          <div class="container"></div>
-          <p class="subtitle nomargin">О НАС</p>
-          <h2 class="title title-section nomargin">
-            Лучший Барбершоп твоего города
-          </h2>
-          <p>
-            Если ты хочешь добавить в свой образ больше уверенности – тебе точно
-            к нам.
-          </p>
-          <p>
-            Мы команда, которая никогда не останавливается на достигнутом и
-            жаждет перемен. И когда ты попадешь в руки нашего мастера, то уже
-            никогда не сможешь быть прежним. Мы команда, которая всегда с
-            клиентами "на одной волне". Поэтому, мы всегда готовы
-            усовершенствовать каждого, кто к нам приходит!
-          </p>
-          <button type="button" class="header-button">онлайн-запись</button>
+      <section class="section about">
+        <div class="container flexbox">
+          <div class="about-images">
+            <ul class="about-images-list list flexbox">
+              <li class="about-images-item">
+                <img
+                  src="./images/about-1.jpg"
+                  alt=""
+                  width="270"
+                  height="445"
+                />
+              </li>
+              <li class="section-images-item">
+                <img
+                  src="./images/about-2.jpg"
+                  alt=""
+                  width="270"
+                  height="445"
+                />
+              </li>
+            </ul>
+          </div>
+          <div class="content">
+            <p class="subtitle nomargin">О НАС</p>
+            <h2 class="title title-section nomargin">
+              Лучший Барбершоп твоего города
+            </h2>
+            <p class="text nomargin">
+              Если ты хочешь добавить в свой образ больше уверенности – тебе
+              точно к нам.
+            </p>
+            <p class="description nomargin">
+              Мы команда, которая никогда не останавливается на достигнутом и
+              жаждет перемен. И когда ты попадешь в руки нашего мастера, то уже
+              никогда не сможешь быть прежним. Мы команда, которая всегда с
+              клиентами "на одной волне". Поэтому, мы всегда готовы
+              усовершенствовать каждого, кто к нам приходит!
+            </p>
+            <button type="button" class="button">онлайн-запись</button>
+          </div>
         </div>
       </section>
       <section class="section price">
@@ -96,15 +117,14 @@
             Проведи время в компании лучших мастеров
           </p>
           <h2 class="title title-section nomargin">Услуги и цены</h2>
-          <div class="price-part-one">
+          <div class="price-box flexbox">
             <ul class="list price-list">
               <li>Мужская стрижка</li>
               <li>Стрижка бороды</li>
               <li>Стрижка усов</li>
               <li>Бритье опасной бритвой</li>
             </ul>
-          </div>
-          <div class="price-part-two">
+
             <ul class="list price-list">
               <li>Cтрижка у стажера</li>
               <li>Стрижка под насадку</li>
@@ -116,28 +136,30 @@
         </div>
       </section>
       <section class="section why">
-        <div class="container">
+        <div class="container flexbox">
           <ul class="list feuters-list">
             <li class="feuters-item">600</li>
             <li class="feuters-item">50</li>
             <li class="feuters-item">20</li>
             <li class="feuters-item">100</li>
           </ul>
-          <p class="subtitle nomargin">старая традиционная школа</p>
-          <h2 class="title title-section nomargin">
-            Почему приходят именно к нам?
-          </h2>
-          <p>
-            О нас говорят только хорошее. Но лучше 1 раз увидеть и
-            прочувствовать, чем 10 раз прочитать.
-          </p>
+          <div class="content">
+            <p class="subtitle nomargin">старая традиционная школа</p>
+            <h2 class="title title-section nomargin">
+              Почему приходят именно к нам?
+            </h2>
+            <p>
+              О нас говорят только хорошее. Но лучше 1 раз увидеть и
+              прочувствовать, чем 10 раз прочитать.
+            </p>
+          </div>
         </div>
       </section>
       <section class="section masters">
         <div class="container">
           <p class="subtitle nomargin">для настоящих ценителей атмосферы</p>
           <h2 class="title title-section nomargin">Наши мастера</h2>
-          <ul class="list masters-list">
+          <ul class="list masters-list flexbox">
             <li class="masters-card">
               <img src="./images/" alt="" />
               <p class="masters-name">John Smith</p>
